examples/good/08-for.cnla
Int main () {
  mut Int x = 0;
  // Prints 21 (which is equal to 0 + 1 + 2 + 3 + 4 + 5 + 6).
  for i in 0..10 {
    x = x + i;
    if x > 20 {
      print(x, "\n");
      return 0;
    }
  }
  return 0;
}
